# jupyter-rs

./: .gitignore  Cargo.toml  README.md  setup.sh
kernelspec/: kernel.json
src/: control.rs  errors.rs  heartbeat.rs  iopub.rs  lib.rs  message.rs  msg_type.rs  raw_message.rs  shell.rs  status.rs  stdin.rs
src/messages/: comm_open.rs  mod.rs
