[package]
authors = ["Paul Woolcock <paul@woolcock.us>"]
description = "Kernel to allow Rust to run in Jupyter (http://jupyter.org) notebooks\n"
homepage = "https://github.com/pwoolcoc/jupyter-rs"
license = "MIT"
name = "jupyter-kernel"
repository = "https://github.com/pwoolcoc/jupyter-rs"
version = "0.1.0"

[[bin]]
name = "jupyter-rust"
path = "src/bin/kernel.rs"

[dependencies]
chan = "0.1.18"
env_logger = "0.3.5"
error-chain = "0.5.0"
log = "0.3.6"
nom = "1.2.4"
serde = "0.8.16"
serde_derive = "0.8.17"
serde_json = "0.8.3"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"

[lib]
name = "jupyter_kernel"
path = "src/lib.rs"
